src/main.css
@import url('text-auto.css') layer(base); /* auto text colors could be overwriten by tailwind more specific classes*/
@import url('flip-cards.css');
@import 'tailwindcss';

@theme {
  /* Primary colors - tus valores dinámicos desde config */
  --color-primary: #000;
  --color-primary-1: #000;
  --color-primary-2: #000;
  --color-primary-3: #000;
  --color-primary-4: #000;
  --color-primary-5: #000;
  --color-primary-6: #000;
  --color-primary-7: #000;
  --color-primary-8: #000;
  --color-primary-9: #000;
  --color-primary-10: #000;

  /* Accent colors */
  --color-accent: #000;
  --color-accent-1: #000;
  --color-accent-2: #000;
  --color-accent-3: #000;
  --color-accent-4: #000;
  --color-accent-5: #000;
  --color-accent-6: #000;
  --color-accent-7: #000;
  --color-accent-8: oklck(0.5 0.18 50);
  --color-accent-9: #000;
  --color-accent-10: #000;
}

/* custom-styles */

::-webkit-scrollbar {
  display: none;
}

button {
  @apply cursor-pointer transition-colors;
}

h1,
h2 {
  @apply font-light;
}

.external-link {
  @apply text-accent-6;
}

input[type='range']::-webkit-slider-runnable-track {
  background-color: var(--color-primary-3);
  height: 2px;
}

input[type='range']::-webkit-slider-thumb {
  margin-top: -7px;
}

.filled-button,
label:has(input[type='file']) {
  @apply bg-accent-7 hover:bg-accent-8 cursor-pointer rounded-md px-2 py-1 transition-colors;
}

.outline-button {
  @apply hover:text-accent-6 cursor-pointer;
}

input[type='file'] {
  display: none;
}

@keyframes brightness {
  60% {
    filter: brightness(1.3);
  }
}

.animate-brightness {
  animation: brightness 3s infinite;
}

